--- a/Day 10/index.html
+++ b/Day 10/index.html
@@ -3,32 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 10</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="nav" aria-label="Primary Navigation" >
-        <div id="container nav-row">
-            <!-- Brand  -->
-             <div class="brand">
-                <span class="not"></span>
-                <a href="/" aria-label="Homepage"></a>
-             </div>
-             <!-- Button -->
-              <button class="nav-toggle" aria-controls="primary-menu" aria-expanded="false">
-                ☰ 
-                <span class="sr-only">Meny</span>
-              </button>
-              <!-- Menu 's' -->
-               <div id="primary-menu" class="menu">
-                <a href="/" aria-current="page">Home</a>
-                <a href="/project">Project</a>
-                <a href="/about">About</a>
-                <a href="/contact">Contact</a>
-               </div>
-        </div>
-    </nav>
+    <div id="div1">
+        <h1>Shahajahan Sheikh</h1>
+        <h3>Web Developer / Designer / Learner</h3>
+    </div>
+
+    <div id="div2">
+        <h2>ABOUT ME</h2>
+        <p>Hello! I am learning HTML and CSS. This is my resume-style webpage where I practice text styling, colors, backgrounds, and fonts. My goal is to become an expert web developer and designer.</p>
+    </div>
+    <div id="div3">
+        <h2>EDUCATION</h2>
+       <p>B.Tech in Computer Science - RGPV</p> <br>
+       <p>Higher Secondary - XYZ School</p>
+    </div>
+    <div id="div4">
+        <h2>SKILLS</h2>
+       <p>FRONTEND DEVELOPMENT</p> <br>
+       <p>JAVA PROGRAMMING</p><br>
+       <p>NEXT.JS</p><br>
+       <p>UI/UX DESIGNING</p>
+    </div>
+    <div id="div5">
+        <h2>PROJECTS</h2>
+       <p>Portfolio Website - A personal site with HTML and CSS</p> <br>
+       <p>Landing Page - Product showcase design</p><br>
+       <p>Blog Layout - Text and images with styling</p><br>
+    </div>
+    <div id="div6">
+        <h2>CONTACT ME</h2>
+       <p>Email: student@example.com</p> <br>
+       <p>Phone: +91 9999999999</p><br>
+       <p>Instagram: @student</p><br>
+    </div>
     
-   <script src="./script.js"></script>
 </body>
 </html>
