--- a/Day 13/index.html
+++ b/Day 13/index.html
@@ -3,28 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 13</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main">
-        <div id="nav">
-            <a href="home">Home</a>
-            <a href="shop">Shop</a>
-            <a href="lockBook">Lookbook</a>
-            <a href="home">About</a>
-            <a href="shop">News</a>
-            <a href="lockBook">Cart</a>
-        </div>
-        <h1>Sweaters</h1>
-        <div id="btmleft">
+   <main>
+    <div id="nav">
+        <a href="#">Home</a>
+        <a href="#">Shop</a>
+        <a href="#">Lookbook</a>
 
-        </div>
-        <img id="frist" src="" alt="">
-        <img id="second" src="" alt="">
-        <img id="third" src="" alt="">
-        
+        <a href="#">About</a>
+        <a href="#">News</a>
+        <a href="#">Cart</a>
     </div>
-    
+    <h1>Shahajahan</h1>
+    <div id="btmleft">
+        <h3>Product Details</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia excepturi doloremque officia.</p>
+        <h4>Material</h4>
+        <p>100% cotton
+        </p>
+    </div>
+    <div id="bottombar">
+        <h1>New Collection</h1>
+        <a href="#">Shop the Look</a>
+    </div>
+    <img id="first" src="https://images.unsplash.com/photo-1549692520-acc6669e2f0c?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1287" alt="">
+    <img id="second" src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2670" alt="">
+    <img id="third" src="https://images.unsplash.com/photo-1581629736838-f6345c2e482c?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=2670" alt="">
+</main>
 </body>
 </html>
